--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="https://img.youtube.com/vi/k3bR2h7w-NY/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=watch?v=B7RCImlm2Og">
-                <img src="https://img.youtube.com/vi/watch?v=B7RCImlm2Og/maxresdefault.jpg" />
+                <img src="https://img.youtube.com/vi/B7RCImlm2Og/maxresdefault.jpg" />
             </a>
 
 
